fix bit changes, added sendemails,somes get about character/movie/user

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "type": "commonjs",
   "dependencies": {
+    "@sendgrid/mail": "^7.6.0",
     "cors": "^2.8.5",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
